--- a/SE1615_Group04_StudentManagement/Views/Shared/_Layout.cshtml
+++ b/SE1615_Group04_StudentManagement/Views/Shared/_Layout.cshtml
@@ -40,15 +40,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Index">Subjects</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="CourseClasses" asp-action="Index">CourseClass</a>
-                                </li>
+             
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Index">Account</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Exercices" asp-action="Index">Exercise</a>
-                                </li>
+                                
                             }
                             else
                             {
@@ -56,7 +52,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Classes" asp-action="Index">MyClass</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Index">MySubjects</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Index">Subjects</a>
                                 </li>
                             }
                             <li class="nav-item">
