--- a/SE1615_Group04_StudentManagement/Views/Subjects/Index.cshtml
+++ b/SE1615_Group04_StudentManagement/Views/Subjects/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SE1615_Group04_StudentManagement.Models.Subject>
 @using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor;
-@{ 
+@{
     String name = HttpContextAccessor.HttpContext.Session.GetString("UserName");
 }
 @{
@@ -9,19 +9,13 @@
 }
 
 <h1>Subject</h1>
+@if (name == "admin")
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<form asp-action="Index">
-    <div class="col-md-4">
-        <div class="form-group">
-            <label class="control-label">SubjectID:</label>
-            <input type="text" name="sid" class="form-control" />
-        </div>
-        <input type="submit" value="Search" class="btn btn-primary" />
-    </div>
-</form>
+}
 
 <table class="table">
     <thead>
@@ -38,14 +32,15 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Subjectid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Subjectid)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
                 @if (name == "admin")
                 {
                     <td>
@@ -57,13 +52,13 @@
                 else
                 {
                     <td>
-                        
+
                         <a asp-action="Details" asp-route-id="@item.Subjectid">Details</a>
-                        
+
                     </td>
                 }
-                
-        </tr>
-}
+
+            </tr>
+        }
     </tbody>
 </table>
